# BP-DigitLab

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  streamlit_app.py  test.py  test_imports.py
app/: 2_interactive_recognition.py  bootstrap.py  experiment_manager.py  inference.py  schemas.py  state.py  streamlit_app.py
app/components/: __init__.py  canvas_board.py  checkpoint_selector.py  debug_gallery.py  experiment_history.py  prediction_panel.py  train_sidebar.py  training_status.py  upload_panel.py
app/pages/: __init__.py  recognition_page.py  train_page.py
app/services/: __init__.py  experiment_service.py  form_service.py  model_service.py  predictor_service.py  preset_service.py  recognition_service.py  training_service.py
app/utils/: __init__.py  dataframe.py  formatters.py
hparams/: bp_emnist_balanced.yaml  bp_emnist_letters.yaml  bp_mnist_baseline.yaml  bp_mnist_improved.yaml  bp_mnist_pixel.yaml  bp_mnist_projection.yaml  bp_mnist_tuned_v1.yaml  bp_mnist_tuned_v2.yaml  bp_mnist_wide_relu_dropout_pixel.yaml  bp_mnist_wide_relu_dropout_v3.yaml
hparams/emnist/: bp_emnist_balanced.yaml  bp_emnist_letters.yaml
hparams/mnist/: ablation_mnist_full.yaml  ablation_mnist_norm.yaml  ablation_mnist_projection.yaml  ablation_mnist_train_strategy.yaml  ablation_mnist_wide.yaml  bp_mnist_baseline.yaml
pages/: 2_interactive_recognition.py
src/: __init__.py  datasets.py  evaluator.py  features.py  hparams.py  models.py  trainer.py  utils.py
src/inference/: __init__.py  image_preprocess.py  predictor.py
