[project]
name = "bp-digitlab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.12"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "pillow>=12.2.0",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.8.0",
    "streamlit>=1.56.0",
    "streamlit-drawable-canvas>=0.9.3",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
]
